# PaifuViewer

./: .gitignore  CMakeLists.txt  PaifuViewer.cpp  PaifuViewer.filters  PaifuViewer.sln  PaifuViewer.vcxproj  README.md
include/: MajongGame.h  Paifu.h  Reader.h  Round.h  Stater.h  Tile.h  Viewer.h
include/layout/: gui_file_dialogs.h  gui_layout_action.h  gui_layout_input.h  gui_layout_play.h
include/style/: YuzuStyle.h
res/fonts/: charset.txt
src/: MajongGame.cpp  PaifuViewer.cpp  RayguiImpl.cpp  Reader.cpp  Round.cpp  Stater.cpp  Viewer.cpp
src/analyzer/: MajongGame.cpp  MajongGame.h  PaifuReader.cpp  PaifuReader.h  Player.cpp  Player.h  Tile.cpp  Tile.h
